# test_task_gp

./: .env-template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/loader/: admin.py  config.py  forms.py  models.py  tasks.py  urls.py  utils.py  validators.py  views.py
src/loader/migrations/: 0001_initial.py  0002_alter_document_document.py  0003_document_row_count.py  0004_document_transform_query.py  0005_document_status.py
src/loader/templates/: transform_success.html  upload.html  upload_success.html
src/settings/: settings.py  urls.py  wsgi.py
