[tool.poetry]
name = "loader"
version = "0.1.0"
description = ""
authors = ["Елизавета Кочергина <kochergina625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.13"
gunicorn = "22.0.0"
psycopg = "3.1.19"
pika = "1.3.2"
pandas = "2.2.2"
openpyxl = "3.1.5"
django-dynamic-model = "0.3.0"
dramatiq = "1.17.0"
django-dramatiq = "0.11.6"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings.settings"
